--- a/CSS/mealmaker.css
+++ b/CSS/mealmaker.css
@@ -169,7 +169,7 @@
 
 .calendar{
     display: grid;
-    grid-template: 5vh repeat(3, calc(85vh/3)) / 3vw repeat(8, 1fr);
+    grid-template: 5vh repeat(3, calc(85vh/3)) / 3vw 2fr 2fr 3fr 1fr;
     width: 100%;
 }
 
@@ -280,18 +280,19 @@
 
     /*The below is for the calendar page in portrait mode*/
     .calendar{
-        grid-template: 2vh repeat(8, calc(91vh / 8)) / 5vw repeat(3, 1fr);
+        grid-template: 2vh 2fr 2fr 3fr 1fr / 5vw repeat(3, 1fr);
         grid-auto-flow: column;
-        grid-template-areas:var(--portraitTemplateAreas);
+        height:93vh;
+        
     }
     .mealWith1Courses{
-        grid-template-rows: calc(3*(100vh - 35px)/27);
+        grid-template-rows: 100%;
     }
     .mealWith2Courses{
-        grid-template-rows: repeat(2,calc(3*(100vh - 35px)/54));
+        grid-template-rows: 50%;
     }
     .mealWith3Courses{
-        grid-template-rows: repeat(3,calc((100vh - 35px)/27));
+        grid-template-rows: 33%;
     }
     
     .title{
@@ -325,4 +326,6 @@
         width: 100%;
         padding: 3vw;
     }
+
+
 }
