--- a/CSS/mealmaker.css
+++ b/CSS/mealmaker.css
@@ -137,7 +137,7 @@
 .mealWith1Courses{
     display: grid;
     align-items:center;
-    grid-template-rows: calc(3*(94vh)/10);
+    grid-template-rows: 100%;
     grid-template-columns: 100%;
     border: 1px;
     border-style: solid none;
@@ -148,7 +148,7 @@
 .mealWith2Courses{
     display: grid;
     align-items:center;
-    grid-template-rows: repeat(2,calc(3*(94vh)/20));
+    grid-template-rows: 50%;
     grid-template-columns: 100%;
     border: 1px;
     border-style: solid none;
@@ -158,7 +158,7 @@
 
 .mealWith3Courses{
     display: grid;
-    grid-template-rows: repeat(3,calc((94vh)/10));
+    grid-template-rows: 33%;
     grid-template-columns: 100%;
     border: 1px;
     border-style: solid none;
@@ -169,7 +169,7 @@
 
 .calendar{
     display: grid;
-    grid-template: 5vh repeat(3, calc(85vh/3)) / 3vw 2fr 2fr 3fr 1fr;
+    grid-template: 5vh repeat(3, calc(70vh/3)) / 3vw 1fr 1fr 1fr 1fr;
     width: 100%;
 }
 
@@ -280,9 +280,9 @@
 
     /*The below is for the calendar page in portrait mode*/
     .calendar{
-        grid-template: 2vh 2fr 2fr 3fr 1fr / 5vw repeat(3, 1fr);
+        grid-template: 2vh repeat(4,1fr) / 5vw repeat(3, 1fr);
         grid-auto-flow: column;
-        height:93vh;
+        height:78vh;
         
     }
     .mealWith1Courses{
